--- a/examples/cleanup_annotation.ipynb
+++ b/examples/cleanup_annotation.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b72d7f29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "360bd395",
    "metadata": {},
@@ -20,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "50a7ca47",
    "metadata": {},
    "outputs": [],
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bisq0nbtdug",
    "metadata": {},
    "outputs": [
@@ -58,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56a7306e87b842b4b811f29550738686",
+       "model_id": "00327e0466394193829a77317a1afb60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,74 +73,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tqenkbe0j09",
-   "metadata": {},
-   "source": [
-    "## Step 2: Find Available Projects/Datasets\n",
-    "\n",
-    "First, let's see what projects and datasets are available to work with."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "uky2s2bn9qj",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available projects:\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'ezomero' has no attribute 'get_projects'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# List available projects\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAvailable projects:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m projects = \u001b[43mezomero\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_projects\u001b[49m(conn)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m project \u001b[38;5;129;01min\u001b[39;00m projects:\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  - Project ID: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproject[\u001b[33m'\u001b[39m\u001b[33mid\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Name: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproject[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: module 'ezomero' has no attribute 'get_projects'"
-     ]
-    }
-   ],
-   "source": [
-    "import ezomero\n",
-    "\n",
-    "# List available projects\n",
-    "print(\"Available projects:\")\n",
-    "projects = ezomero.get_projects(conn)\n",
-    "for project in projects:\n",
-    "    print(f\"  - Project ID: {project['id']}, Name: {project['name']}\")\n",
-    "\n",
-    "print(\"\\nAvailable datasets:\")\n",
-    "datasets = ezomero.get_datasets(conn)\n",
-    "for dataset in datasets:\n",
-    "    print(f\"  - Dataset ID: {dataset['id']}, Name: {dataset['name']}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "pmtgkcnc3y9",
    "metadata": {},
    "source": [
-    "## Step 3: List Annotation Tables\n",
+    "## Step 2: List Annotation Tables\n",
     "\n",
     "View all annotation tables in your chosen container."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e4yk6vld2p",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Error listing tables: 'NoneType' object has no attribute 'getGroupFromContext'\n",
+      "Found 0 annotation tables in Project 101:\n"
+     ]
+    }
+   ],
    "source": [
     "# Specify your container type and ID (from the list above)\n",
-    "container_type = \"project\"  # or \"dataset\"\n",
-    "container_id = 123  # Replace with actual ID from the list above\n",
+    "container_type = \"Project\"  # or \"dataset\"\n",
+    "container_id = 101  # Replace with actual ID from the list above\n",
     "\n",
     "# List all annotation tables in the container\n",
     "tables = list_annotation_tables(conn, container_type, container_id)\n",
@@ -172,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "uzpvitwshi",
    "metadata": {},
    "outputs": [
@@ -180,27 +131,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting annotation table with ID: 102\n",
-      "❌ Error deleting table 102: 'NoneType' object has no attribute 'getObject'\n",
+      "Deleting annotation table with ID: 951\n",
+      "❌ Error deleting table 951: 'NoneType' object has no attribute 'getObject'\n",
       "❌ Failed to delete annotation table\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-! 07/18/25 00:26:23.863 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/18/25 00:26:23.888 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/18/25 00:26:23.897 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/18/25 00:26:23.898 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/18/25 00:26:23.899 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/18/25 00:26:23.917 --Ice.Config=: warning: Proxy keep alive failed.\n"
      ]
     }
    ],
    "source": [
     "# Delete specific annotation table by ID\n",
-    "table_id_to_delete = 102  # Replace with the actual table ID you want to delete\n",
+    "table_id_to_delete = 951  # Replace with the actual table ID you want to delete\n",
     "\n",
     "# Confirm deletion\n",
     "print(f\"Deleting annotation table with ID: {table_id_to_delete}\")\n",
@@ -303,7 +242,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
