Use pixi as default install method, extend pyproject.toml

--- a/examples/cleanup_annotation.ipynb
+++ b/examples/cleanup_annotation.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e4yk6vld2p",
    "metadata": {},
    "outputs": [
@@ -93,6 +93,15 @@
      "text": [
       "❌ Error listing tables: 'NoneType' object has no attribute 'getGroupFromContext'\n",
       "Found 0 annotation tables in Project 101:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-! 07/23/25 08:16:15.996 --Ice.Config=: warning: Proxy keep alive failed.\n",
+      "-! 07/23/25 08:16:16.070 --Ice.Config=: warning: Proxy keep alive failed.\n",
+      "-! 07/23/25 08:16:16.073 --Ice.Config=: warning: Proxy keep alive failed.\n"
      ]
     }
    ],
