Refactor code structure for improved readability and maintainability

--- a/examples/omero-annotate-ai-from-yaml.ipynb
+++ b/examples/omero-annotate-ai-from-yaml.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "print(f\"Container: {config.omero.container_type} (ID: {config.omero.container_id})\")\n",
     "print(f\"Training Set: {config.training.trainingset_name}\")\n",
-    "print(f\"Model: {config.microsam.model_type}\")\n",
+    "print(f\"Model: {config.micro_sam.model_type}\")\n",
     "print(f\"Output: {config.batch_processing.output_folder}\")\n",
     "\n",
     "if config.patches.use_patches:\n",
