--- a/examples/omero-annotate-ai-pipeline.ipynb
+++ b/examples/omero-annotate-ai-pipeline.ipynb
@@ -328,7 +328,7 @@
     "print(\"\\n📋 Configuration Summary:\")\n",
     "print(f\"   📦 Container: {config.omero.container_type} (ID: {config.omero.container_id})\")\n",
     "print(f\"   🎯 Training Set: {config.training.trainingset_name}\")\n",
-    "print(f\"   🔬 Model: {config.microsam.model_type}\")\n",
+    "print(f\"   🔬 Model: {config.micro_sam.model_type}\")\n",
     "print(f\"   📺 Channel: {config.omero.channel}\")\n",
     "print(f\"   📁 Output: {config.batch_processing.output_folder}\")\n",
     "print(f\"   🔄 Resume from Table: {config.workflow.resume_from_table}\")\n",
@@ -337,7 +337,7 @@
     "if config.patches.use_patches:\n",
     "    print(f\"   🧩 Patches: {config.patches.patches_per_image} per image ({config.patches.patch_size[0]}×{config.patches.patch_size[1]})\")\n",
     "\n",
-    "if config.microsam.three_d:\n",
+    "if config.micro_sam.three_d:\n",
     "    print(f\"   🧊 3D processing: Enabled\")\n",
     "\n",
     "print(f\"\\n📊 Processing scope: {'All images' if config.training.segment_all else f'{config.training.train_n} training + {config.training.validate_n} validation'}\")"
@@ -541,7 +541,7 @@
     "# Run the complete annotation pipeline\n",
     "print(\"🚀 Starting annotation pipeline...\")\n",
     "print(f\"   📊 Processing {len(images_list)} images\")\n",
-    "print(f\"   🔬 Using micro-SAM model: {config.microsam.model_type}\")\n",
+    "print(f\"   🔬 Using micro-SAM model: {config.micro_sam.model_type}\")\n",
     "\n",
     "if config.batch_processing.batch_size == 0:\n",
     "    print(f\"   ⚡ Processing: All images in one batch\")\n",
@@ -593,7 +593,7 @@
     "print(f\"   📋 Tracking Table ID: {table_id}\")\n",
     "print(f\"   📊 Images Processed: {len(processed_images)}\")\n",
     "print(f\"   📦 Container: {config.omero.container_type} (ID: {config.omero.container_id})\")\n",
-    "print(f\"   🔬 Model Used: {config.microsam.model_type}\")\n",
+    "print(f\"   🔬 Model Used: {config.micro_sam.model_type}\")\n",
     "print(f\"   📁 Output Location: {config.batch_processing.output_folder}\")\n",
     "\n",
     "# Show processed images\n",
