improve pipeline behaviour

--- a/examples/omero-annotate-ai-pipeline.ipynb
+++ b/examples/omero-annotate-ai-pipeline.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +120,13 @@
       "  • Click 'Save & Connect' to establish connection\n",
       "\n",
       "📄 Loaded configuration from connection history: root@localhost\n",
-      "⚠️ Error loading password from keychain: No recommended backend was available. Install a recommended 3rd party backend package; or, install the keyrings.alt package if you want to use the non-recommended backends. See https://pypi.org/project/keyring for details.\n"
+      "🔐 Password loaded from keychain (no expiration)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0541e1e8faf045bd934886937d6b37af",
+       "model_id": "4bb065a46a284910b16a1f9022e09ddc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108329300aaa4848861989ecc1ea6d5c",
+       "model_id": "14946e5c1bc74e3aa93ca61ca3a7db65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,29 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Configuration is valid!\n",
-      "\n",
-      "📋 Configuration Summary:\n",
-      "   📦 Container: project (ID: 101)\n",
-      "   🎯 Training Set: microsam_senescence_20250722_134531\n",
-      "   🔬 Model: vit_b_lm\n",
-      "   📺 Channel: 0\n",
-      "   📁 Output: /mnt/c/Users/Maarten/Documents/Github/omero_annotate_ai/examples/omero_annotations\n",
-      "   🔄 Resume from Table: False\n",
-      "   📖 Read-only Mode: False\n",
-      "   🧩 Patches: 1 per image (256×256)\n",
-      "\n",
-      "📊 Processing scope: 1 training + 1 validation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get configuration from workflow widget\n",
     "config = workflow_widget.get_config()\n",
@@ -345,32 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Validating project with ID 101...\n",
-      "✅ Found project: Senescence\n",
-      "📁 Loading images from project 101\n",
-      "📊 Found 6 images\n",
-      "\n",
-      "📊 Found 6 images to process\n",
-      "\n",
-      "🖼️ Sample images:\n",
-      "   1. r01c06.tif (ID: 252)\n",
-      "   2. r01c05.tif (ID: 255)\n",
-      "   3. r01c02.tif (ID: 251)\n",
-      "   4. r01c01.tif (ID: 256)\n",
-      "   5. r01c04.tif (ID: 253)\n",
-      "   ... and 1 more images\n",
-      "\n",
-      "✅ Ready to process 6 images!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create pipeline and preview what will be processed\n",
     "pipeline = create_pipeline(config, conn)\n",
@@ -417,126 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Starting annotation pipeline...\n",
-      "   📊 Processing 6 images\n",
-      "   🔬 Using micro-SAM model: vit_b_lm\n",
-      "   ⚡ Processing: All images in one batch\n",
-      "   🎨 Napari will open for interactive annotation\n",
-      "   📝 Close napari windows when annotation is complete\n",
-      "\n",
-      "🚀 Creating annotation table\n",
-      "📁 Loading images from project 101\n",
-      "📊 Found 6 images\n",
-      "📊 Creating table for 6 images with model: vit_b_lm\n",
-      "📋 Creating new tracking table: microsam_training_microsam_senescence_20250722_134531\n",
-      "📋 ROI namespace: omero_annotate_ai.table.microsam_training_microsam_senescence_20250722_134531\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:109: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna(False).infer_objects(copy=False).astype(bool)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:109: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna(False).infer_objects(copy=False).astype(bool)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:109: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna(False).infer_objects(copy=False).astype(bool)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:109: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna(False).infer_objects(copy=False).astype(bool)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:109: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna(False).infer_objects(copy=False).astype(bool)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:114: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna('None').infer_objects(copy=False).astype(str)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:114: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna('None').infer_objects(copy=False).astype(str)\n",
-      "/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/omero_annotate_ai/omero/omero_functions.py:114: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[col] = df[col].fillna('None').infer_objects(copy=False).astype(str)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📋 Created tracking table 'microsam_training_microsam_senescence_20250722_134531' with 2 units\n",
-      "   Container: project 101\n",
-      "   Table ID: 1057\n",
-      "object group 0\n",
-      "Stored configuration as annotation ID: 1058\n",
-      "object group 0\n",
-      "📊 Workflow status updated: 0/2 (0.0%) - pending\n",
-      "📋 Created annotation table with ID: 1057\n",
-      "🚀 Starting annotation processing from table ID: 1057\n",
-      "📋 Getting unprocessed units from table 1057\n",
-      "📋 Found 2 unprocessed units\n",
-      "📋 Found 2 processing units\n",
-      "🔄 Processing batch 1/1\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Precompute state for files: 100%|██████████| 2/2 [01:18<00:00, 39.48s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precomputation took 82.6767578125 seconds (= 01:23 minutes)\n",
-      "The first image to annotate is image number 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: QObject::moveToThread: Current thread (0x61c1c3d48da0) is not the object's thread (0x61c1cdfb3880).\n",
-      "Cannot move to target thread (0x61c1c3d48da0)\n",
-      "\n",
-      "WARNING:vispy:QObject::moveToThread: Current thread (0x61c1c3d48da0) is not the object's thread (0x61c1cdfb3880).\n",
-      "Cannot move to target thread (0x61c1c3d48da0)\n",
-      "\n",
-      "WARNING: Could not load the Qt platform plugin \"xcb\" in \"/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/cv2/qt/plugins\" even though it was found.\n",
-      "WARNING:vispy:Could not load the Qt platform plugin \"xcb\" in \"/home/maarten/miniconda3/envs/micro-sam/lib/python3.12/site-packages/cv2/qt/plugins\" even though it was found.\n",
-      "WARNING: This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.\n",
-      "\n",
-      "Available platform plugins are: xcb, eglfs, minimal, minimalegl, offscreen, vnc, webgl.\n",
-      "\n",
-      "WARNING:vispy:This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.\n",
-      "\n",
-      "Available platform plugins are: xcb, eglfs, minimal, minimalegl, offscreen, vnc, webgl.\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the complete annotation pipeline\n",
     "print(\"🚀 Starting annotation pipeline...\")\n",
