--- a/examples/cleanup_annotation.ipynb
+++ b/examples/cleanup_annotation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "50a7ca47",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bisq0nbtdug",
    "metadata": {},
    "outputs": [
@@ -44,13 +44,13 @@
      "output_type": "stream",
      "text": [
       "📄 Loaded configuration from connection history: root@localhost\n",
-      "⚠️ Error loading password from keychain: No recommended backend was available. Install a recommended 3rd party backend package; or, install the keyrings.alt package if you want to use the non-recommended backends. See https://pypi.org/project/keyring for details.\n"
+      "🔐 Password loaded from keychain (no expiration)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00327e0466394193829a77317a1afb60",
+       "model_id": "96ac674240e246ca813790ccaeb353b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e4yk6vld2p",
    "metadata": {},
    "outputs": [
@@ -91,25 +91,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ Error listing tables: 'NoneType' object has no attribute 'getGroupFromContext'\n",
-      "Found 0 annotation tables in Project 101:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-! 07/23/25 08:16:15.996 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/23/25 08:16:16.070 --Ice.Config=: warning: Proxy keep alive failed.\n",
-      "-! 07/23/25 08:16:16.073 --Ice.Config=: warning: Proxy keep alive failed.\n"
+      "Found 5 annotation tables in Project 201:\n",
+      "  - Table ID: 1238, Name: micro_sam_training_micro_sam_foci_test_20250815_090353\n",
+      "    Progress: 100.0% complete (2/2 units)\n",
+      "  - Table ID: 1240, Name: micro_sam_training_micro_sam_foci_test_20250815_090353\n",
+      "    Progress: 0.0% complete (0/2 units)\n",
+      "  - Table ID: 1243, Name: micro_sam_training_micro_sam_foci_test_202adsfasdff\n",
+      "    Progress: 0.0% complete (0/2 units)\n",
+      "  - Table ID: 1251, Name: micro_sam_training_micro_sam_foci_test_202adsfasdff\n",
+      "    Progress: 100.0% complete (2/2 units)\n",
+      "  - Table ID: 1219, Name: micro_sam_training_micro_sam_foci_test_20250815_090353\n",
+      "    Progress: 100.0% complete (4/4 units)\n"
      ]
     }
    ],
    "source": [
     "# Specify your container type and ID (from the list above)\n",
     "container_type = \"Project\"  # or \"dataset\"\n",
-    "container_id = 101  # Replace with actual ID from the list above\n",
-    "\n",
+    "container_id = 201  # Replace with actual ID from the list above\n",
+    "conn = conn_widget.get_connection()\n",
     "# List all annotation tables in the container\n",
     "tables = list_annotation_tables(conn, container_type, container_id)\n",
     "print(f\"Found {len(tables)} annotation tables in {container_type} {container_id}:\")\n",
@@ -140,15 +140,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting annotation table with ID: 951\n",
-      "❌ Error deleting table 951: 'NoneType' object has no attribute 'getObject'\n",
-      "❌ Failed to delete annotation table\n"
+      "Deleting annotation table with ID: 1230\n",
+      "🗑️ Deleting table: micro_sam_training_micro_sam_foci_test_20250815_090353\n",
+      "✅ Successfully deleted table 1230\n",
+      "✅ Annotation table deleted successfully\n"
      ]
     }
    ],
    "source": [
     "# Delete specific annotation table by ID\n",
-    "table_id_to_delete = 951  # Replace with the actual table ID you want to delete\n",
+    "table_id_to_delete = 1230  # Replace with the actual table ID you want to delete\n",
     "\n",
     "# Confirm deletion\n",
     "print(f\"Deleting annotation table with ID: {table_id_to_delete}\")\n",
@@ -206,15 +207,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e9itd3o7s55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧹 Starting cleanup of project 201...\n",
+      "🧹 Starting cleanup of project 201\n",
+      "📊 Found 1 datasets and 10 images in project\n",
+      "🗂️ Cleaning up annotation tables...\n",
+      "🎯 Cleaning up ROIs...\n",
+      "🗺️ Cleaning up map annotations...\n",
+      "🔍 Found 0 annotations with namespace 'openmicroscopy.org/omero/micro_sam/workflow_status'\n",
+      "🔍 No annotations found with namespace 'openmicroscopy.org/omero/micro_sam/workflow_status'\n",
+      "🔍 Found 0 annotations with namespace 'openmicroscopy.org/omero/micro_sam/workflow_status'\n",
+      "🔍 No annotations found with namespace 'openmicroscopy.org/omero/micro_sam/workflow_status'\n",
+      "\n",
+      "📊 Cleanup completed:\n",
+      "   Tables deleted: 0\n",
+      "   ROIs deleted: 0\n",
+      "   Map annotations deleted: 0\n",
+      "   Images processed: 10\n",
+      "\n",
+      "📊 Cleanup Results:\n",
+      "   Tables deleted: 0\n",
+      "   ROIs deleted: 0\n",
+      "   Map annotations deleted: 0\n",
+      "   Images processed: 10\n"
+     ]
+    }
+   ],
    "source": [
     "from omero_annotate_ai.omero.omero_functions import cleanup_project_annotations\n",
     "\n",
     "# Complete project cleanup - removes all annotation tables, ROIs, and map annotations\n",
-    "project_id = 123  # Replace with your actual project ID\n",
+    "project_id = 201  # Replace with your actual project ID\n",
     "\n",
     "# Optional: specify training set name to only clean up specific annotations\n",
     "# trainingset_name = \"my_training_set\"  # Uncomment and set if needed\n",
@@ -232,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6uj177qx2l3",
    "metadata": {},
    "outputs": [],
@@ -246,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "micro-sam",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
