fix pipeline.py class structure

--- a/examples/omero-annotate-ai-pipeline.ipynb
+++ b/examples/omero-annotate-ai-pipeline.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OMERO Micro-SAM Streamlined Workflow\n",
+    "# OMERO Micro-SAM Workflow\n",
     "\n",
-    "This notebook demonstrates the streamlined 2-widget workflow using the `omero-annotate-ai` package.\n",
-    "\n",
-    "## Key Features:\n",
-    "- **2 Widget Workflow**: Only connection and workflow widgets needed\n",
-    "- **Sequential Process**: Step-by-step guided workflow\n",
-    "- **Complete Integration**: Direct pipeline execution with `run_full_workflow()`\n",
-    "- **Secure Connection**: Built-in keychain support and connection management\n",
-    "\n",
-    "## Process Overview:\n",
-    "1. **OMERO Connection** - Secure connection with password management\n",
-    "2. **Workflow Setup** - Sequential configuration process\n",
-    "3. **Pipeline Execution** - Run the complete annotation workflow\n",
-    "4. **Results** - View results and export configuration"
+    "\n"
    ]
   },
   {
@@ -538,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "micro-sam",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
